# todo

./: .gitignore  README.md  filldb.sh  gui_idea.xopp~  requirements.txt  setup.cfg  todo.py  tudu.py
todo/: __init__.py  cli.py  data_controllers.py  data_manager.py  exception.py  model.py  startup.py  tui.py  util.py  view.py
todo/tui/: help.py  prompt.py  task.py  tui.py  ui.py
tudu/: LICENSE  __init__.py  cli.py  data_controllers.py  exception.py  startup.py  util.py
tudu/tui/: help.py  prompt.py  task.py  tui.py  ui.py
