[metadata]
name = tudu
version = 0.01
author = Karolina Lubczańska
description = simple command line tool with a tui mode for managing your to-do lists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lubczanska/tudu
entry_points={
    'console_scripts': [
        'tudu=tudu.cli:main',
    ],
},
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Console :: Curses

[options]
packages = find:
python_requires = >=3.6
